create and invite if user is not in a party